--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>realsense_camera</name>
+  <name>realsense_camera_wrapper</name>
   <version>0.0.0</version>
-  <description>The realsense_camera package</description>
+  <description>The realsense_camera_wrapper package</description>
   <maintainer email="abepadalkar@gmail.com">Abhishek Padalkar</maintainer>
   <license>TODO</license>
   <author email="abepadalkar@gmail.com">Abhishek Padalkar</author>
